# agentic-langraph-rag

./: .gitignore  README.md  _copy.env  main.py  pyproject.toml  requirements.txt  run.py
app/: db.py  main.py  models.py
app/agent/: graph.py
app/api/: chat.py  ingest.py
app/services/: document_parser.py  embedding.py  llm_contract.py  qdrant.py
app/utils/: logging.py
app/worker/: worker.py
frontend/: index.html  package-lock.json  package.json
frontend/src/components/: ChatInterface.css  ChatInterface.tsx  CitationList.css  CitationList.tsx  DocumentUpload.css  DocumentUpload.tsx  JobStatusList.css  JobStatusList.tsx  index.ts
frontend/src/hooks/: useDashboardData.ts  useJobPolling.ts
frontend/src/pages/: Dashboard.css  Dashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
